--- a/frr/hub/frr.conf
+++ b/frr/hub/frr.conf
@@ -7,9 +7,16 @@ service integrated-vtysh-config
 router bgp 65001
  bgp router-id 1.1.1.1
  neighbor 10.10.10.2 remote-as 65002
+ neighbor 10.10.10.3 remote-as 65003
+ neighbor 10.10.10.4 remote-as 65004
+
  !
  address-family ipv4 unicast
-  network 10.10.10.254/32
+ network 10.10.10.254/32
+ neighbor 10.10.10.2 activate
+ neighbor 10.10.10.3 activate
+ neighbor 10.10.10.4 activate
+
  exit-address-family
 !
 line vty
